Satya's changes for Debit,Credit and Transfer

--- a/SecureBankingSystem/WebContent/WEB-INF/web.xml
+++ b/SecureBankingSystem/WebContent/WEB-INF/web.xml
@@ -2,14 +2,14 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>SecureBankingSystem</display-name>
   <welcome-file-list>
-    <welcome-file>/webpages/credit.jsp</welcome-file>
+    <welcome-file>/webpages/Transfer.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-    <servlet-name>DebitAndCreditServlet</servlet-name>
-    <servlet-class>com.asu.ss.secure_banking_system.servlet.DebitAndCreditServlet</servlet-class>
+    <servlet-name>TransferServlet</servlet-name>
+    <servlet-class>com.asu.ss.secure_banking_system.servlet.TransferServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>DebitAndCreditServlet</servlet-name>
-    <url-pattern>/credit.jsp</url-pattern>
+    <servlet-name>TransferServlet</servlet-name>
+    <url-pattern>/Transfer.jsp</url-pattern>
   </servlet-mapping>
 </web-app>
