--- a/SecureBankingSystem/WebContent/WEB-INF/web.xml
+++ b/SecureBankingSystem/WebContent/WEB-INF/web.xml
@@ -2,8 +2,16 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>SecureBankingSystem</display-name>
   <welcome-file-list>
-    <welcome-file>/webpages/Transfer.jsp</welcome-file>
+    <welcome-file>/webpages/Debit.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>DebitAndCreditServlet</servlet-name>
+    <servlet-class>com.asu.ss.secure_banking_system.servlet.DebitAndCreditServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DebitAndCreditServlet</servlet-name>
+    <url-pattern>/Debit.jsp</url-pattern>
+  </servlet-mapping>
   <servlet>
     <servlet-name>TransferServlet</servlet-name>
     <servlet-class>com.asu.ss.secure_banking_system.servlet.TransferServlet</servlet-class>
@@ -11,5 +19,13 @@
   <servlet-mapping>
     <servlet-name>TransferServlet</servlet-name>
     <url-pattern>/Transfer.jsp</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>OTPServlet</servlet-name>
+    <servlet-class>com.asu.ss.secure_banking_system.servlet.OTPServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OTPServlet</servlet-name>
+    <url-pattern>/FinancialOTP.jsp</url-pattern>
   </servlet-mapping>
 </web-app>
