--- a/SecureBankingSystem/.classpath
+++ b/SecureBankingSystem/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resource"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
@@ -45,7 +45,8 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/staxmapper-1.1.0.Final.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/woodstox-core-asl-4.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.26-bin.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Java_Libraries/unboundid-ldapsdk-2.3.4-se/unboundid-ldapsdk-2.3.4-se/unboundid-ldapsdk-se.jar"/>
-	<classpathentry kind="lib" path="C:/Java_Libraries/javax.mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/gokul/HappyTT/SecureBankingSystem/WebContent/WEB-INF/lib/unboundid-ldapsdk-se.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/gokul/HappyTT/SecureBankingSystem/WebContent/WEB-INF/lib/javax.mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/recaptcha4j-0.0.7.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
